2009-01-18  Christopher Bratusek <zanghar@freenet.de>
	* OPTIONS
	* lisp/sawfish/wm/animation/outline.jl
	* lisp/sawfish/wm/window-anim.jl
	* lisp/sawfish/wm/commands/move-resize.jl
	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/util/window-outline.jl: added 3 new animators (cross, elliptical and draft)

	* src/events.c: Iconify before repyfying (as requested by WM_HINTS) [Ian Zimmerman]

2009-01-17  Christopher Bratusek <zanghar@freenet.de>
	* OPTIONS: fixed a typo

2009-01-14  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/commands/slide-window.jl: merge changes from sawfish-pager

	* lisp/sawfish/wm/state/shading.jl: merge changes from sawfish-pager

	* lisp/sawfish/wm/swapper
	* lisp/sawfish/wm/windows
	* lisp/sawfish/wm/util/display-window.jl: replace "librep"/"Jade" by "sawfish" in the copyright header

	* lisp/gtk/stock.jl: Added. (Why has it been missing?)

	* sawfish.pc.in: add libexecdir and sawfishhosttype

2009-01-11  Mario Blättermann  <mariobl@svn.gnome.org>
	* po/de.po: Updated German translation.

2009-01-06  Christopher Bratusek <nano-master@gmx.de>
	* Makefile.in: don't forget to uninstall sawfish.pc upon "make uninstall"

2009-01-03  Christopher Bratusek <nano-master@gmx.de>
	* po/sawfish.pot: updated .pot file

	* po/*.po: updated all .po files

2009-01-01  Christopher Bratusek <nano-master@gmx.de>
	* autogen.sh: small rework

	* config.h.in
	* configure.in
	* Makedefs.in: new configure.in working now (some necassary #define have not been created)

	* build-info: create ./src/build.h instead of ./build.in

	* configure.in: execute build-info, since some .c files include it, but it hasn't been there before

	* lisp/sawfish/wm/viewport.jl: move viewport-boundary-mode and scroll-viewport-steps from Workspace
				       to Workspace/Viewport in Sawfish-UI

	* m4: add that directory to make libtool 1.x shut up

	* lisp/sawfish/wm/gnome/menus.jl
	* lisp/sawfish/wm/util/display-wininfo.jl
	* lisp/sawfish/gtk/Makefile.in