@@ -79,6 +79,8 @@ they occurred between. For more detailed information see the
 @item Dropped libgnome|gnomeui|gnomecanvas widgets, use pure gtk instead [Christopher Bratusek]
 
 @item Merged changes from sawfish-pager [Christopher Bratusek]
+
+@item Major update of the spec file [Christopher Bratusek]
 @end itemize
 @end itemize
 
